Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58843

Moving dock widget with custom titlebar doesn't honour window frame

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.9
    • 5.6, 5.8
    • Widgets: Main Window
    • None
    • Windows
    • 99ce1d3d97c0423c3ee63cc

      if you click the custom titlebar of your dock widget you'll notice the drag won't start in the same place you clicked, there's a slight offset, if the window has custom margins.

      This isn't usually a problem, since the window will be frameless by default, but it's possible to use custom title bar with native window frames, which gives you nice drop shadow for free.

      The fix should be simply a matter of adding the margin

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            iamsergio Sergio Martins
            iamsergio Sergio Martins
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes